--- a/css/style.scss
+++ b/css/style.scss
@@ -291,6 +291,7 @@ main {
 
             li {
                 color: #6C6C6C;
+                font-size: 1.125rem;
 
                 span {
                     color: #5C1548;
@@ -438,7 +439,7 @@ main {
     }
 
     .content {
-        padding: 2rem 7rem 2rem calc(22% + .5rem);
+        padding: 3rem 7rem 3rem calc(22% + .5rem);
 
         p {
             line-height: 1.6875rem;
@@ -459,8 +460,14 @@ main {
     padding: 0 2rem 2rem;
 
     .dieu-kien-tot-nghiep {
+
+
         @media screen and (min-width:1200px) {
             padding: 0rem 5rem;
+
+            .title {
+                margin-bottom: 3rem;
+            }
         }
     }
 }
@@ -532,12 +539,22 @@ footer {
 
         &.title {
             color: #fff;
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+
+            @media screen and (min-width:1200px) {
+                font-size: 2.25rem;
+            }
         }
     }
 
     .logo-ft {
-        max-width: 30%;
+        max-width: 75%;
         margin-bottom: 1rem;
+
+        @media screen and (min-width:1200px) {
+            max-width: 30%;
+        }
     }
 }
 
@@ -732,6 +749,10 @@ footer {
 
     #dieukien {
         padding: 2rem 0;
+
+        .title {
+            margin-bottom: 2rem;
+        }
     }
 
     #about-aes,
